<resources>
    <string name="app_name">Home Secure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home Secure</string>
    <string name="nav_header_subtitle">info@homesecure.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_sensor">Sensor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_login_intro">Welcome to Home Secure</string>
    <string name="text_app_motto">We make it easy to monitor your home security remotely</string>
    <string name="menu_login">Login</string>
    <string name="no_internet">No internet connection</string>
    <string name="wifi_settings">Do you want to check wifi settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="homesecure_application_logo">HomeSecure application logo</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="menu_camera_feed">Camera feed</string>
    <string name="menu_rfid">Rfid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_rfid">Rfid sensor</string>
    <string name="label_motion">Motion sensor</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_door">Unlock door</string>
    <string name="home_secure_dashboard">Home secure dashboard</string>
    <string name="camera_feed">Camera feed</string>
    <string name="geofence">Geofence</string>
    <string name="geofence_icon">geofence icon</string>
    <string name="rfid">RFID</string>
    <string name="live_feed_icon">live feed icon</string>
    <string name="rfid_icon">rfid icon</string>
    <string name="motion_sensor">Motion sensor</string>
    <string name="motion_sensor_icon">motion sensor icon</string>
    <string name="knock_sensor_icon">knock sensor icon</string>
    <string name="knock_sensor">Knock sensor</string>
    <string name="icon_lock_door">icon lock door</string>
</resources>
