<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_menu_sensor"
            android:title="@string/menu_sensor" />
        <item
            android:id="@+id/nav_lock"
            android:icon="@drawable/ic_menu_lock"
            android:title="@string/menu_unlock" />
        <item
            android:id="@+id/nav_camera_feed"
            android:icon="@drawable/ic_camera_feed"
            android:title="@string/menu_camera_feed" />
        <item
            android:id="@+id/nav_rfid"
            android:icon="@drawable/ic_rfid"
            android:title="@string/menu_rfid" />
    </group>
</menu>
