<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/home_secure_dashboard"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/feed"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/camera_feed"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <ImageView
                        android:id="@+id/feed"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/live_feed_icon"
                        app:srcCompat="@drawable/ic_feed" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_motion"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/motion_sensor"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textAlignment="center"/>

                    <ImageView
                        android:id="@+id/img_motion"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/motion_sensor_icon"
                        app:srcCompat="@drawable/ic_motion" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/knock_sensor"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/knock_sensor_icon"
                        app:srcCompat="@drawable/ic_knock" />

                    <TextView
                        android:id="@+id/text_knock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/knock_sensor"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/knock_sensor"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/train"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/unlock"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <ImageView
                        android:id="@+id/train"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@drawable/ic_lock"
                        android:contentDescription="@string/icon_lock_door" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cycle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/rfid"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/cycle"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/rfid_icon"
                        app:srcCompat="@drawable/ic_rfid_main" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_geofence"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/geofence"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/img_geofence"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/geofence_icon"
                        app:srcCompat="@drawable/ic_map" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
